# opencertiface

./: Makefile  README.md  clientPING.c  clientVerifyImg.c  functionSRV.c  functionSRV.h  functions.h  ns.xsd  opencertiface.nsmap  opencertiface.ping.req.xml  opencertiface.ping.res.xml  opencertiface.verifyImg.req.xml  opencertiface.verifyImg.res.xml  opencertiface.wsdl  ping.c  soapC.c  soapClient.c  soapClientLib.c  soapH.h  soapServer.c  soapServerLib.c  soapStub.h  soapTester.c  verifyAll.cpp  webServerVerifyFace.c  webServerVerifyFace.h  webServerVerifyFaceThread.c
biometrics/openbr/janus/: CMakeLists.txt  LICENSE.txt  README.md
biometrics/openbr/janus/data/: Kirchner.csv  LFW_YTF_sequester.csv  Toledo.csv  extract_keyframes.sh  gallery_probe.py  janusProtocol.py  janusQuery.sql  lfw_ytf.py  meds.csv  mergeLFW_YTF.py  runCS0.sh  runIJBA.sh  runJanus.sh  sampleFrames.py  sources.csv  splitData.py
biometrics/openbr/janus/include/: iarpa_janus.h  iarpa_janus_io.h  janus.h  janus_aux.h  janus_io.h
biometrics/openbr/janus/src/: CMakeLists.txt  janus_io.cpp
biometrics/openbr/janus/src/cmake/: FindPP5.cmake
biometrics/openbr/janus/src/doxygen/: CMakeLists.txt  Doxyfile.in
biometrics/openbr/janus/src/opencv_io/: CMakeLists.txt  opencv_io.cpp
biometrics/openbr/janus/src/pittpatt/: CMakeLists.txt  pittpatt.c  pittpatt.cpp  pittpatt_io.c  pittpatt_io.cpp
biometrics/openbr/janus/src/utils/: CMakeLists.txt  janus_create_gallery.cpp  janus_create_templates.cpp  janus_enroll.cpp  janus_evaluate.cpp  janus_evaluate_search.cpp  janus_evaluate_verify.cpp  janus_verify.cpp  janus_verify_pairwise.cpp
biometrics/share/openbr/doc/slides/: readme.md  slides.tex
biometrics/share/openbr/models/: EyeLocatorASEF128x128.fel
biometrics/share/openbr/models/algorithms/: AgeRegression  FaceRecognition  GenderClassification
biometrics/share/openbr/models/transforms/: FaceClassificationExtraction  FaceClassificationRegistration  FaceRecognitionExtraction  FaceRecognitionQuantization  FaceRecognitionRegistration
examples/bash/: final.xml  verify.sh
examples/java/: verify.java
examples/java/br/com/opencertiface/opencertiface_wsdl/: Opencertiface.java  OpencertifaceLocator.java  OpencertifacePortType.java  OpencertifaceStub.java
examples/java/jar/: br  manifest.txt
examples/php/: check.php  index.html
htmlPage/: README.txt  index.html  opencertiface.wsdl
htmlPage/assets/css/: .directory  main.css
htmlPage/assets/sass/: ie8.scss  ie9.scss  main.scss
htmlPage/assets/sass/libs/: _mixins.scss
script/: opencertiface
src/: Makefile  clientPING.c  clientVerifyImg.c  functionSRV.c  functionSRV.h  functions.h  ping.c  verifyAll.cpp  webServerVerifyFace.c  webServerVerifyFace.h  webServerVerifyFaceThread.c
